# xbit_vector

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/xbit_vector/: xbit_vector.hpp
script/: ci_install_catch.sh
test/: CMakeLists.txt  test.cpp
